tests/errors/runtime.FileNotFound.1.res
>> Runtime | file not found: *.art
     error | 
